sdk/include/ml.h

/* ========================================================================== */
/*                              CORE TYPES & UTILITIES                         */
/* ========================================================================== */

/** Plugin Id string type - plain char* for plugin id
 * @ref ml_get_device_list device must in list of plugin ids
 */
typedef const char* ml_PluginId;
/** Path string type - plain char* for file paths */
typedef const char* ml_Path;
typedef enum {
    ML_LOG_LEVEL_TRACE, /* Trace messages */
    ML_LOG_LEVEL_DEBUG, /* Debug messages */
    ML_LOG_LEVEL_INFO,  /* Informational messages */
    ML_LOG_LEVEL_WARN,  /* Warning messages */
    ML_LOG_LEVEL_ERROR  /* Error messages */
} ml_LogLevel;
/** Logging callback function type */
typedef void (*ml_log_callback)(ml_LogLevel, const char*);
/* ====================  Data Structures  ==================================== */

/** Profile data structure for performance metrics */
typedef struct {
    int64_t ttft;        /* Time to first token (us) */
    int64_t prompt_time; /* Prompt processing time (us) */
    int64_t decode_time; /* Token generation time (us) */

    int64_t prompt_tokens;    /* Number of prompt tokens */
    int64_t generated_tokens; /* Number of generated tokens */
    int64_t audio_duration;   /* Audio duration (us) */

    double prefill_speed;    /* Prefill speed (tokens/sec) */
    double decoding_speed;   /* Decoding speed (tokens/sec) */
    double real_time_factor; /* Real-Time Factor(RTF) (1.0 = real-time, >1.0 = faster, <1.0 = slower) */

    const char* stop_reason; /* Stop reason: "eos", "length", "user", "stop_sequence" */
} ml_ProfileData;
/** LLM / VLM model configuration */
typedef struct {
    int32_t n_ctx;            // text context, 0 = from model
    int32_t n_threads;        // number of threads to use for generation
    int32_t n_threads_batch;  // number of threads to use for batch processing
    int32_t n_batch;          // logical maximum batch size that can be submitted to llama_decode
    int32_t n_ubatch;         // physical maximum batch size
    int32_t n_seq_max;        // max number of sequences (i.e. distinct states for recurrent models)
    int32_t n_gpu_layers;     // number of layers to offload to GPU, 0 = all layers on CPU

    // TODO: consider removing the following fields from ModelConfig, or move to another struct
    ml_Path     chat_template_path;     // path to chat template file, optional
    const char* chat_template_content;  // content of chat template file, optional
    const char* system_prompt;          // system prompt for chat template, optional
    bool        enable_sampling;        // DEPRECATED, use enable_json in ml_SamplerConfig
    const char* grammar_str;            // grammar string
    int32_t     max_tokens;             // max tokens to generate
    bool        enable_thinking;        // enable thinking mode for Qwen models
    bool        verbose;                // verbose logging
    // For QNN
    ml_Path qnn_model_folder_path;  // path to QNN model folder, default same as model_path
    ml_Path qnn_lib_folder_path;    // path to QNN library folder, default same as model_path
} ml_ModelConfig;
/* ========================================================================== */
/*                              RERANKING MODELS                               */
/* ========================================================================== */

/** Reranking configuration */
typedef struct {
    int32_t     batch_size;       /* Processing batch size */
    bool        normalize;        /* Whether to normalize scores */
    const char* normalize_method; /* Normalization: "softmax", "min-max", "none" */
} ml_RerankConfig;
typedef struct ml_Reranker ml_Reranker; /* Opaque reranker handle */
/* ====================  Lifecycle Management  ============================== */

/** Input structure for creating a reranker */
typedef struct {
    const char*    model_name;     /** Name of the model */
    ml_Path        model_path;     /** Path to the model file */
    ml_Path        tokenizer_path; /** Path to the tokenizer file */
    ml_ModelConfig config;         /** Model configuration */
    ml_PluginId    plugin_id;      /** Plugin to use for the model */
    const char*    device_id;      /** device to use for the model */
} ml_RerankerCreateInput;
/**
 * @brief Create and initialize a reranker instance from model files
 *
 * @param input[in]: Input parameters for the reranker creation
 * @param out_handle[out]: Pointer to the reranker handle. Must be freed with ml_reranker_destroy.
 *
 * @return ml_ErrorCode: ML_SUCCESS on success, negative on failure.
 *
 * @thread_safety: Not thread-safe
 */
ML_API int32_t ml_reranker_create(const ml_RerankerCreateInput* input, ml_Reranker** out_handle);
/**
 * @brief Destroy reranker instance and free associated resources
 *
 * @param handle[in]: The reranker handle to destroy.
 *
 * @return ml_ErrorCode: ML_SUCCESS on success, negative on failure.
 *
 * @thread_safety: Not thread-safe
 */
ML_API int32_t ml_reranker_destroy(ml_Reranker* handle);
/* ====================  Reranking  ========================================= */

/** Input structure for reranking operation */
typedef struct {
    const char*            query;           /** Query text in UTF-8 encoding */
    const char**           documents;       /** Array of document texts in UTF-8 encoding */
    int32_t                documents_count; /** Number of documents */
    const ml_RerankConfig* config;          /** Reranking configuration (optional, can be nullptr) */
} ml_RerankerRerankInput;
/** Output structure for reranking operation */
typedef struct {
    float*         scores;       /** Output ranking scores array (caller must free with ml_free) */
    int32_t        score_count;  /** Number of scores returned */
    ml_ProfileData profile_data; /** Profiling data for the reranking operation */
} ml_RerankerRerankOutput;
/**
 * @brief Rerank documents against a query
 *
 * @param handle[in]: Reranker handle
 * @param input[in]: Input parameters for reranking operation
 * @param output[out]: Output data containing the ranking scores
 *
 * @return ml_ErrorCode: ML_SUCCESS on success, negative on failure.
 *
 * @thread_safety: Not thread-safe
 */
ML_API int32_t ml_reranker_rerank(
    ml_Reranker* handle, const ml_RerankerRerankInput* input, ml_RerankerRerankOutput* output);